--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_marginEnd="@dimen/_16sdp"
         android:ems="10"
         android:inputType="numberDecimal"
-        android:hint="Enter Start Number"
+        android:hint="@string/enter_start_number_txt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -31,7 +31,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edt_stat_num"
-        android:hint="Enter End Number"/>
+        android:hint="@string/enter_end_number_txt"/>
 
     <TextView
         android:id="@+id/txt_label_result"
@@ -42,7 +42,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
-        android:text="Enter Two Number"
+        android:text="@string/enter_two_number_txt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edt_end_num" />
